add routing on recipes components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <app-header></app-header>
-<app-recipes></app-recipes>
-<br>
-<br>
-<br>
-<br>
-<app-shopping-list></app-shopping-list>
+<!--<app-recipes></app-recipes>-->
+<!--<br>-->
+<!--<br>-->
+<!--<br>-->
+<!--<br>-->
+<!--<app-shopping-list></app-shopping-list>-->
+<router-outlet></router-outlet>
