--- a/src/app/features/recipes/recipes.component.html
+++ b/src/app/features/recipes/recipes.component.html
@@ -2,7 +2,6 @@
     <div class="detail">
         <app-recipes-list></app-recipes-list>
     </div>
-    <div class="list">
-        <app-recipes-detail></app-recipes-detail>
-    </div>
+    <router-outlet></router-outlet>
 </div>
+<!--<router-outlet></router-outlet>-->
