--- a/src/app/features/recipes/recipes-detail/recipes-detail.component.html
+++ b/src/app/features/recipes/recipes-detail/recipes-detail.component.html
@@ -1,7 +1,19 @@
-<div>
-  <h2>Recipe Name</h2>
-</div>
-<div class="dropdown">
-  <button>Manage Recipe <i class="fa fa-caret-down"></i></button>
+<div class="main-content">
+  <div class="items" >
+    <div class="img">
+      <img src="{{recipe.imagePath}}">
+    </div>
+    <br>
+    <div class="content">
+      <span style="font-size: 35px; color: black">{{recipe.name}}</span>
+      <br>
+      <br>
+      <div class="dropdown">
+        <button>Manage Recipe <i class="fa fa-caret-down"></i></button>
+      </div>
+      <br>
+      <span style="font-size: 25px; color: black"> {{recipe.description}}</span>
+    </div>
+  </div>
 </div>
 
