--- a/src/app/features/recipes/recipes-detail/recipes-detail.component.scss
+++ b/src/app/features/recipes/recipes-detail/recipes-detail.component.scss
@@ -7,3 +7,13 @@ button{
   font-size: 15px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+img{
+  max-width: 350px;
+  max-height: 350px;
+}
+.main-content{
+  margin-right: 600px;
+}
+span{
+  font-family: "Bookman Old Style";
+}
