--- a/src/app/features/recipes/recipes-list/recipes-list.component.html
+++ b/src/app/features/recipes/recipes-list/recipes-list.component.html
@@ -1,14 +1,9 @@
 <div class="button">
     <button>New recipe</button>
 </div>
-<div class="main-content" *ngFor="let item of recipes">
-  <div class="items" >
-    <div class="content">
-      <span style="font-size: 19px; color: black">{{item.name}}</span>
-      <span style="font-size: 15px; color: black"> {{item.description}}</span>
-    </div>
-    <div class="img">
-      <img src="{{item.imagePath}}">
-    </div>
-  </div>
-</div>
+<hr>
+<app-recipes-item
+  *ngFor="let recipeList of recipes; let i = index"
+  [recipe]="recipeList"
+  [index]="i"
+></app-recipes-item>
