--- a/src/app/features/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/features/shopping-list/shopping-edit/shopping-edit.component.html
@@ -2,15 +2,20 @@
   <form>
     <div class="name">
       <label for="name">Name</label>
-      <input type="text" id="name">
+      <input type="text"
+             id="name"
+             #nameInput>
+
     </div>
     <div class="amount">
       <label for="amount">amount</label>
-      <input type="number" id="amount">
+      <input type="number"
+             id="amount"
+             #amountInput>
     </div>
   </form>
   <div class="buttons">
-    <button style="background-color: green">Add</button>
+    <button style="background-color: green" (click)="addItem()">Add</button>
     <button style="background-color: red">Delete</button>
     <button>clear</button>
   </div>
