add remove and clear method and TD issue  user cannot add his own products

--- a/src/app/features/shopping-list/shopping-edit/shopping-edit.component.scss
+++ b/src/app/features/shopping-list/shopping-edit/shopping-edit.component.scss
@@ -8,6 +8,7 @@ form{
     input{
       width: 280px;
       height: 19px;
+      border-radius: 5px;
     }
   }
   .amount{
@@ -17,11 +18,17 @@ form{
     input{
       width: 130px;
       height: 19px;
+      border-radius: 5px;
     }
   }
   label{
     font-family: "Arial Black";
     font-size: 15px;
+  }
+  .buttons{
+    margin-top: 60px;
+    position: relative;
+    right: 460px;
   }
 }
 button{
