--- a/src/app/features/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/features/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,22 +1,25 @@
 <div class="edit-content">
-  <form>
+  <form (ngSubmit)="addItem(f)" #f="ngForm">
     <div class="name">
       <label for="name">Name</label>
       <input type="text"
              id="name"
-             #nameInput>
-
+             name="name"
+             ngModel
+             >
     </div>
     <div class="amount">
       <label for="amount">amount</label>
       <input type="number"
              id="amount"
-             #amountInput>
+             name="amount"
+             ngModel
+             >
+    </div>
+    <div class="buttons">
+      <button type="submit" style="background-color: green">{{editMode ? 'Update' : 'Add'}}</button>
+      <button *ngIf="editMode" type="button" style="background-color: red" (click)="onDelete()">Delete</button>
+      <button type="button" (click)="onClear()">clear</button>
     </div>
   </form>
-  <div class="buttons">
-    <button style="background-color: green" (click)="addItem()">Add</button>
-    <button style="background-color: red">Delete</button>
-    <button>clear</button>
-  </div>
 </div>
