--- a/src/app/features/shopping-list/shopping-list.component.html
+++ b/src/app/features/shopping-list/shopping-list.component.html
@@ -1,5 +1,7 @@
 <app-shopping-edit ></app-shopping-edit>
 <hr>
-<div class="shopping-content" *ngFor="let item of ingredient">
- <span> {{item.name}} ({{item.amount}})</span>
+<div class="shopping-content" *ngFor="let item of ingredient
+      let i = index"
+     (click)="onEditing(i)">
+ <span style="cursor: pointer"> {{item.name}} ({{item.amount}})</span>
 </div>
